<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limit_min_volume_toggle_text"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/set_min_limit_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limit_max_volume_toggle_text"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enable_max_lovume_limit_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>


    <com.appyvet.rangebar.RangeBar
        android:id="@+id/rangebar"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="72dp"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible"


        custom:rangeBar="true"
        custom:tickEnd="7"
        custom:tickInterval="1"
        custom:tickStart="1"
        />

    <LinearLayout
        android:id="@+id/seekbar_placeholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/start_from_min_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_from_min_false_description"
        />

    <TextView
        android:id="@+id/show_device_max_volume_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_sound_level_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
    >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/do_not_ring_toggle_text"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/do_not_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>

    <TextView
        android:id="@+id/skip_ring_descr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="@dimen/smaller_text_size"
        android:text="@string/skip_ring_descr_text"
    />

</LinearLayout>