<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limit_min_volume_toggle_text"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/set_min_limit_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>


    <SeekBar
        android:id="@+id/min_level_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limit_max_volume_toggle_text"
            android:textSize="16sp"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enable_max_lovume_limit_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sound_max_level_limit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        >


        <SeekBar
            android:id="@+id/max_level_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/start_from_min_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_from_min_false_description"
        />

    <TextView
        android:id="@+id/show_device_max_volume_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_sound_level_text"
        />

</LinearLayout>